--- a/characters/sphoryx.html
+++ b/characters/sphoryx.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <!--title-->
-  <title>LASAK | NEOPETS.LGBT</title>
+  <title>SPHORYX | NEOPETS.LGBT</title>
   <!--favicon-->
   <link rel="icon" href="https://neopets.lgbt/images/other/favicon.png">
   <!--current site font: Arvo-->
@@ -29,7 +29,7 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    background-color: #e0912b;
+    background-color: #ffcb69;
     height: 100%;
   }
 
@@ -69,7 +69,7 @@
 
   a:link,
   a:visited {
-    color: #e0912b;
+    color: #ffcc00;
   }
 
 
@@ -154,20 +154,20 @@
 <body>
 
   <div class="top">
-    <a href="/neopets">NEOPETS</a> >> LASAK
+    <a href="/neopets">NEOPETS</a> >> SPHORYX
   </div>
   <div class="main">
-    <img src="/images/characters/lasak/box-lasak.gif">
+    <img src="/images/characters/sphoryx/box-sphoryx.gif">
     <br>
   <br>
-  LASAK, <i>THE RESTLESS WOLF</i>
-  <br> HALLOWEEN LUPE
+  SPHORYX, <i>THE ORYX'S CORPSE</i>
+  <br> ELDERLYGIRL OGRIN
 <br>
-VIEW ON: <a href="https://www.neopets.com/petlookup.phtml?pet=Lasaklang">NEOPETS</a> | <a href="https://impress.openneo.net/outfits/2502700">OPENNEO</a>
+VIEW ON: <a href="https://www.neopets.com/petlookup.phtml?pet=Sphoryx">NEOPETS</a> | <a href="https://impress-2020.openneo.net/outfits/3019425">OPENNEO</a>
   </div>
 
   <div class="main">
-    <img src="/images/gifs/lupe.gif" alt="Lupe!" title="Lupe!"><img src="/images/gifs/werelupe.gif" alt="Werelupe Enjoyer!" title="Werelupe Enjoyer!"><img src="/images/gifs/relax.gif" alt="Relaxed!" title="Relaxed!"><img src="/images/gifs/groovy.gif" alt="Groovy!" title="Groovy!"><img src="/images/gifs/runaway_garlic.gif" alt="Ah! Garlic!" title="Ah! Garlic!"><img src="/images/gifs/whee.gif" alt="Whee!" title="Whee!"><img src="/images/gifs/mibeach.gif" alt="Beach Time!" title="Beach Time!"><img src="/images/gifs/hi.gif" alt="hi" title="hi"><img src="/images/gifs/arcade.gif" alt="Arcade Enjoyer!" title="Arcade Enjoyer!">
+    SPHORYX IS BUSY EARNING AVATARS! CHECK BACK LATER
 
 </div>
 
