--- a/about.html
+++ b/about.html
@@ -29,29 +29,7 @@ body {
   }
   
   /* begin div css */
-  /* makes the boxes do the thing*/
-  
-
-  /* top css */
-  .top {
-    position: relative;
-    top: -50%;
-    margin: 20px auto;
-    width: 70%;
-    max-width: 600px;
-    background: rgb(34, 34, 34);
-    color: rgb(255, 255, 255);
-    word-wrap: break-word;
-    padding: 10px;
-    text-align: center;
-    box-shadow: 10px black;
-    font-weight: bold;
-    font-size: 14px;
-  }
-  
-  /* main css, use this when adding more boxes */
  
-
   .top {
     position: relative;
     top: -50%;
@@ -180,19 +158,21 @@ body {
 - File hosting and email for Tenko and friends
 </div>
 <div class="main">
- This project was originally a Neocities site and I still like to preserve the Web 1.0 look of it, so Javascript is rarely used and avoided in favor of HTML/CSS trickery when possible. This site can be entirely navigated with JS disabled, however, it enables conveniences like the music player on character pages. Cookies are only used for closing message boxes.  
+ "Privacy notice": This site can be entirely navigated with Javascript disabled, however, it enables conveniences like the music player function on character pages. Cookies are only used for closing message boxes.  
 </div>
 <div class="main">See also:<br>
 
 <a href="https://www.furaffinity.net/user/tenkowski/">furaffinity</a> - le epic furry artwork
 <br>
-<a href="https://www.furtrack.com/user/tenko/fursuiting">furtrack</a> - fursuit photos of/from me
+<a href="https://www.furtrack.com/user/tenko/fursuiting">furtrack</a> - tenko photos
 <br>
 <a href="https://www.last.fm/user/tenkowski">last.fm</a> - what I'm listening to
 <br>
+<a href="https://github.com/tenkowski">github</a> - what I'm coding
+<br>
 <a href="https://tenkowski.neocities.org/">neocities</a> - archived!
 <br><br>
-...and @tenkowski on pretty much everything!
+... and @tenkowski on pretty much everything else!
 </div>
 </div>
 </body>
