--- a/neopets.html
+++ b/neopets.html
@@ -137,11 +137,6 @@ img {
     height: 150px;
   }
 
-img.wide {
-    width:300px;
-    height:150px
-}
-
   .clickable {
   cursor: pointer; /* Change cursor to indicate clickability */
   text-decoration: underline; /* Add underline for visual cue */
@@ -187,8 +182,10 @@ window.onload = function() {
             <a href="/qiru"><img src="images/portraits/portrait_qiru.png"></a>
             <a href="/caci"><img src="images/portraits/portrait_caciwagua.png"></a>
             <a href="/lasak"><img src="images/portraits/portrait_lasaklang.png"></a>
-            <a href="/ranka"><img src="images/portraits/portrait_rankamaru.png"></a> 
+            <a href="/ranka"><img src="images/portraits/portrait_rankamaru.png"></a>p
             <a href="https://www.neopets.com/userlookup.phtml?user=lol_99"><img src="images/portraits/portrait_andmore.png"></a>
+
+            <!--<a href="/sirubiru"><img src="images/portraits/sirubiru.png"style="width:300px; height:150px;">-->
     </div>
 </div>
     <div class="main">
