soon trademark new portraits and characters

--- a/neopets.html
+++ b/neopets.html
@@ -171,9 +171,8 @@ window.onload = function() {
     <div class="top"><a href="/">HOME</a> > NEOPETS</div>
 
 
-    <div id="notice1">
-        ⚠️ September 2024: Character pages are slowly being updated or added! Pages that are the most up to date say NEOPETS instead of CHARACTERS on the top bar. Thanks for waitin. <span class="clickable" onclick="myFunction()">[close this message]</span>
-    </div>
+    <!--<div id="notice1">
+        ⚠️ September 2024: Character pages are slowly being updated or added! Pages that are the most up to date say NEOPETS instead of CHARACTERS on the top bar. Thanks for waitin. <span class="clickable" onclick="myFunction()">[close this message]</span> -->
     <div class="main">
         <div class="container">
             <a href="/tenko"><img src="/images/portraits/portrait_tenko.png"></a>
@@ -182,10 +181,12 @@ window.onload = function() {
             <a href="/qiru"><img src="images/portraits/portrait_qiru.png"></a>
             <a href="/caci"><img src="images/portraits/portrait_caciwagua.png"></a>
             <a href="/lasak"><img src="images/portraits/portrait_lasaklang.png"></a>
-            <a href="/ranka"><img src="images/portraits/portrait_rankamaru.png"></a>p
+            <a href="/ranka"><img src="images/portraits/portrait_rankamaru.png"></a>
+            <a href="roku"><img src="images/portraits/portrait_roku.png"></a>
+            <a href="sphoryx"><img src="images/portraits/portrait_sphoryx.png"></a>
+            <a href="/sirubiru"><img src="images/portraits/portrait_sirubiru.png"style="width:300px; height:150px;">
             <a href="https://www.neopets.com/userlookup.phtml?user=lol_99"><img src="images/portraits/portrait_andmore.png"></a>
 
-            <!--<a href="/sirubiru"><img src="images/portraits/sirubiru.png"style="width:300px; height:150px;">-->
     </div>
 </div>
     <div class="main">
@@ -209,20 +210,12 @@ window.onload = function() {
         <hr>
         <u>Art</u>: Extra art goes near the bottom
         <hr>
-        <u>Credit</u>: Links to the great artists who drew for me!
+        <u>Art Credit</u>: Always include names and links to the artists! 
         <hr>
         ⚠️ Content is added irregularly, especially lore and music
     </div>
     <div class="mainy">
-        <center><span class=bigtext>CREDIT</span></center>
-<i>
-tenko, vim, sosa, qiru art by <a href="https://twitter.com/WEBPARTEEZ">webparteez</a> | 
-caci, lasak, ranka art by <a href="https://twitter.com/ferwanwan">ferwanwan</a> | 
-roninko art by <a href="https://twitter.com/felitech_">felitech</a> | 
-nekotenko art by <a href="https://twitter.com/muttvore">muttvore</a> | all characters painted, zapped, mutated, reincarnated, transmogrified, lgbtq-pilled and more by tenko
-
-
-</i>
+<i> all characters painted, zapped, mutated, reincarnated, transmogrified, etc. by tenko</i>
 </div>
 </body>
 </html>
