characters folder is now the neopets folder, other minor changes to some pages

--- a/fursuits.html
+++ b/fursuits.html
@@ -53,20 +53,6 @@
         text-align: center;
     }
 
-    .mainleft {
-        position: relative;
-        top: -50%;
-        margin: 20px auto;
-        width: 90%;
-        max-width: 13000px;
-        background: rgb(34, 34, 34);
-        color: rgb(255, 255, 255);
-        word-wrap: break-word;
-        padding: 5px;
-        box-shadow: 10px 10px black;
-        text-align: left;
-    }
-
     /* top  */
     .top {
         position: relative;
@@ -85,22 +71,13 @@
 
 
     /* more sitewide css */
-
-
-    .male {
-        color: #04e2ff;
+    p {
+        text-align: left;
     }
 
-    .female {
-        color: #ca1616;
-    }
+    #link:hover {
+        text-decoration: underline;
 
-    .darigan {
-        color: #c18aff;
-    }
-
-    .nonbinary {
-        color: rgb(182, 166, 255);
     }
 
     .bigtext {
@@ -145,15 +122,25 @@
 
 <body>
 <div class="cushion">
-    <div class="top"><a href="/">NEOPETS.LGBT</a> > FURSUITS</div>
+    <div class="top"><a href="/" id="link">NEOPETS.LGBT</a> > FURSUITS</div>
     <div class="main">
         <div class="container">
             <span class="bigtext">
                 <a href="/images/collage/COLLAGE24_7.png" target="_blank"><img src="images/collage/COLLAGE24_7.png"></a>
-                <br><br>
-                <span class="bigtext">THERE ARE ABOUT <br><u>51</u> NEOPET FURSUITS*<br>AS OF JULY 2024 
-                <br><br>
-                + 11 added since Summer 2023!  </span></span>
+                <br><hr>
+                THERE ARE ABOUT <br><u>51</u> NEOPET FURSUITS*<br>AS OF JULY 2024</span>
+                <hr><br>
+
+                <p>Big updates to the collage are usually made biyearly:</p>
+                <p>- Once in the Winter, around MAGFest</p>
+                <p>- Once in the Summer, around Anthrocon</p>
+                <br>
+                <p>A directory to supplement the collage is in development. It will include things like:</p>
+                <p>- Credits to the makers</p>
+                <p>- Credits to the fursuiters</p>
+                <p>- Costumes owned by The Neopets Team</p>
+                <br>
+                <p><a href="mailto:tenko@neopets.lgbt" id="link">Email Tenko</a>  if you have questions about this!</p>
         </div>
     </div>
 </body>
