--- a/neopets/roku.html
+++ b/neopets/roku.html
@@ -29,7 +29,7 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    background-color: #ffcb69;
+    background-color: #ece05c;
     height: 100%;
   }
 
@@ -69,7 +69,7 @@
 
   a:link,
   a:visited {
-    color: #ffcc00;
+    color: #fb1a1a;
   }
 
 
