big caci update

--- a/neopets/caci.html
+++ b/neopets/caci.html
@@ -47,7 +47,7 @@
     margin: 20px auto;
     width: 70%;
     max-width: 700px;
-    background: #f3e9d3;
+    background: #e2e2e2;
     color: rgb(0, 0, 0);
     word-wrap: break-word;
     padding: 10px;
@@ -90,17 +90,6 @@
   /* begin extra text stuff */
   /* heading aka bigger text */
 
-
-
-  .heading {
-    font-size: 18px;
-  }
-
-  .bigtext {
-    font-size: 15px;
-  }
-
-
   /* whitetext */
   .whitetext {
     color: rgb(255, 255, 255)
@@ -130,15 +119,42 @@
     max-height: 100%;
   }
 
-  .bigtext {
-    color: rgb(255, 255, 255);
-    font-size: 20px;
-    text-align: center;
+  #ferallore {
+      display: none;
+    }
+
+    #ferallore:target {
+      display: block;
+    }
+
+  #anthrolore {
+    display: none;
   }
 
-  .kindabigtext {
+  #anthrolore:target {
+    display: block;
+  }
+
+  .button {
+      padding: 5px 10px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      margin: 4px 2px;
+      cursor: pointer;
+      font-family: "Arvo", serif;
+      font-weight: bold;
+    }
+
+    .button5 {
+      background-color: #343434;
+      color: #c6a6de;
+    }
+
+    .bigtext {
     color: rgb(255, 255, 255);
-    font-size: 17px;
+    font-size: 20px;
     text-align: center;
   }
 </style>
@@ -210,8 +226,8 @@
   <div class="top">
     <a href="/neopets">NEOPETS</a> >> CACI
   </div>
-  <div class="main"><img src="/images/characters/caci/tenkowski_hissitransparent.png">
-    <hr>
+  <div class="main">
+
     <br>
   <img src="/images/characters/caci/caci-box.gif">
 <br>
@@ -224,13 +240,50 @@ VIEW ON: <a href="https://www.neopets.com/petlookup.phtml?pet=Caciwagua">NEOPETS
 
   
 </div>
-<div class="main">
-<i>Raised by spooky-colored Neopets, Caciwagua can be considered a prodigy in all things "rawr". She's always wearing her Zomutt kigu at home, and always loves to pretend play with her mom and Bori. Imagine coming home to find the sofa cushions in your living room scattered evenly across the floor like a stepping stone path: that's Caci wanting to play a game of "The Floor Is Lava" with you. Slithering up trees just high enough to be above your eye level and get your attention: that's her pretending to be the cat stuck in a tree that you have to save. 
+
+<div class="mainy">
+  <center><img src="/images/characters/caci/tenkowski_hissitransparent.png"></center>
+
+<span class="bigtext">FERAL FORM.
+ART BY <a href="https://twitter.com/iffykins">IFFYKINS</a>
+<br>
+HEIGHT: 24CM
+<br>
+AGE: SMOL</span>
+<br>
+<a href="#ferallore"><button class="button button5"> LORE</button></a>
+<p id="ferallore">
+<span class="bigtext"><i>A Short Bio by Ranka (Caci's Mom) and Tenko:</span>
+  <br><br>
+  Where do we begin? Everyone is proud of what Caci has accomplished in her short life so far. She's already an adventerous little girl with the fierce wits and questioning, tricky mind of a keen Hissi. 
+    
+  <br><br>
+  The day dad passed away in an accident was a devastating day for us all. However, in tragedy, there was hope, and more importantly it was the deterministic Ranka who sought to stay the course and bring balance and care into her upbringing. We have each other to thank for giving Caci the tools she's needed to turn her into what she is now. We hope her father is watching her proudly from the skies above.
+        
+  <br><br>
+  Caci's a prodigy in all things "rawr". She's always wearing her Zomutt kigu at home, the one Tenko bought her, and  loves to pretend play with us. Caci's the type of mischievous Baby Hissi to rearrange your sofa cushions in an evenly scattered pattern across the floor, and ask you to jump on them like stepping stones in a game of "The Floor Is Lava". Caci will also slither up trees just high enough to be out of reach but within your vision and pretend she's the Kadoatie that needs rescuing. Every month of the year is like October for her, and she goes bonkers when it's actually spooky season, going so far as to come up with her own makeup and props for herself and us for Halloween or just for fun. We can't believe the things she comes up with, but we always entertain her creativity and give her a budget for spending on her ideas. She's resourceful, too, going back to her old projects or modifying store-bought costumes and tailoring it to her current vision and interests.
+</i></p>
+
+
 </div>
 <div class="mainy">
-hissi are © 1999-20XX Neopets
+<center><img src="/images/characters/caci/caci_halloween_crop.PNG" width="60%" height="60%"></center>
+
+<span class="bigtext">ANTHRO FORM. ART BY <a href="https://x.com/felitech_">FELITECH</a>
 <br>
-reference portrait: <a href="https://twitter.com/iffykins">iffykins</a>
+HEIGHT: 120CM
+<br>
+AGE: MORE THAN SMOL</span>
+<br>
+<a href="#anthrolore"><button class="button button5"> LORE</button></a>
+<p id="anthrolore">How did she grow two legs, Hissi are almost never bipeds...? Caci don't care. First of all, it means she can wear anthro kigus, which are far more common than feral kigus. This form is experimental. It's not really her main quest in life right now to learn the ways of transformation like her Tenko does, but she likes the form regardless whenever he transforms her into an anthro. Yes, you bet she made this custom Zomutt kigu all on her own and yes, no matter her age or form, she's always Zomutt-brained. By now she probably has made half a dozen or more kigus, but the classic green and grey Zomutt kigu design will always be her favorite. 
+<br><br>
+She may learn to transform in and out of this form at-will one day. She needs Tenko to cast this form on her. You can tell she's been around or will be around Tenko soon if she's anthro. 
+<br><br>
+The other miscellaneous uses of form-swapping are endless: Tenko can sneak Caci into Didneyworl for free if she was feral, then resize her to anthro past the gate. Anthro Caci is also great for sports! She can yeet Tenko like a makeshift Yooyu to practice her arm or play catch, or run the field/bases when Tenko takes her to watch a game of baseball or Yooyuball.
+
+</p>
+</div>
 </div>
 </body>
 </head>
