TENKO TRACK CHANGE

--- a/neopets/tenko.html
+++ b/neopets/tenko.html
@@ -24,7 +24,7 @@
     background-size: cover;
     background-color: rgb(82, 43, 87);
     height: 100%;
-    background-image: url("https://neopets.lgbt/images/other/whyheurple.png");
+   /* background-image: url("https://neopets.lgbt/images/other/whyheurple.png"); F THE BACKGROUND*/
   }
 
   .container {
@@ -127,7 +127,7 @@
     text-align: center;
   }
 
-  .slidetotheleft {
+  #slidetotheleft {
     text-align: left;
   }
 
@@ -342,12 +342,17 @@
     <audio controls="" id="audio" autoplay="false" tabindex="0"></audio>
     <hr>
     <ul id="playlist">
-      <a href="/audio/tenko/powersthatb.mp3">★ Death Grips - Powers That B</a>
+      <a href="/audio/tenko/talk.mp3">★ Phish - Talk</a>
+        <br>
+        <a href="/audio/tenko/middleoftheroad.mp3">★ Leo Kottle - Middle Of The Road
+        </a>
         <br>
         <a href="/audio/tenko/funnyfarm.mp3">★ Lightning Bolt - Funny Farm</a>
         <br>
-        <a href="/audio/tenko/judgement.mp3">★ LINGUA IGNOTA - THE SACRED LINAMENT OF JUDGMENT
-        </a>
+        <p id="slidetotheleft">
+       
+       <br>
+       ★ Tenko's main tracks change often. It will almost certainly be tinged with rock and or folk. Also see the tracks on <a href="/vim">Vim's</a> page, which are similar to Tenko's tastes. </p>
       </div>
   </div>
 
