pull request test

--- a/neopets/tenko.html
+++ b/neopets/tenko.html
@@ -24,7 +24,7 @@
     background-size: cover;
     background-color: rgb(82, 43, 87);
     height: 100%;
-   /* background-image: url("https://neopets.lgbt/images/other/whyheurple.png"); F THE BACKGROUND*/
+   background-image: url("https://neopets.lgbt/images/other/whyheurple.png");
   }
 
   .container {
@@ -352,7 +352,7 @@
         <p id="slidetotheleft">
        
        <br>
-       ★ Tenko's main tracks change often. It will almost certainly be tinged with rock and or folk. Also see the tracks on <a href="/vim">Vim's</a> page, which are similar to Tenko's tastes. </p>
+       ★ Tenko's main tracks change often. It will almost certainly include a guitar and mayhaps be tinged with rock and or folk. Also see the tracks on <a href="/vim">Vim's</a> page, which are similar to Tenko's tastes. </p>
       </div>
   </div>
 
