--- a/index.html
+++ b/index.html
@@ -77,6 +77,6 @@
     </div>
     
     <div class="bottom">
-        <a href="/about">about neopets.lgbt</a> | <a href="https://github.com/tenkowski/NEOPETS.LGBT/">new features</a>
+        <a href="/about">about neopets.lgbt</a> | <a href="https://github.com/tenkowski/NEOPETS.LGBT/">new features (github)</a>
     </div>
 </body>
