--- a/other/404.html
+++ b/other/404.html
@@ -59,6 +59,10 @@ body {
   font-weight: bold;
 }
 
+a:visited {
+        text-decoration: none;
+        color: rgb(83, 255, 152);
+    }
 
     </style>
 
@@ -71,8 +75,9 @@ body {
    </div>
    <div class="main">   
     Click the GOODBOY to go home.<br>
+    Did you expect a page to be here? I might be working on it today, <a href="https://github.com/tenkowski/NEOPETS.LGBT">check the GitHub</a>
    
-    <br>
+    <br><br>
 
     <a href="/"><img src="images/other/GOODBOY.gif"></a>
    </div>
