credit is back, also delete row 4 for now

--- a/neopets.html
+++ b/neopets.html
@@ -184,8 +184,8 @@ window.onload = function() {
             <a href="/lasak"><img src="images/portraits/portrait_lasaklang.png"></a>
             <a href="roku"><img src="images/portraits/portrait_roku.png"></a>
             <a href="sphoryx"><img src="images/portraits/portrait_sphoryx.png"></a>
-            <a href="/sirubiru"><img src="images/portraits/portrait_sirubiru.png"style="width:300px; height:150px;">
-            <a href="https://www.neopets.com/userlookup.phtml?user=lol_99"><img src="images/portraits/portrait_andmore.png"></a>
+            <!--<a href="/sirubiru"><img src="images/portraits/portrait_sirubiru.png"style="width:300px; height:150px;">
+            <a href="https://www.neopets.com/userlookup.phtml?user=lol_99"><img src="images/portraits/portrait_andmore.png"></a>-->
 
     </div>
 </div>
@@ -215,7 +215,12 @@ window.onload = function() {
         ⚠️ Content is added irregularly, especially lore and music
     </div>
     <div class="mainy">
-<i> all characters painted, zapped, mutated, reincarnated, transmogrified, etc. by tenko</i>
+<i> all characters painted, zapped, mutated, reincarnated, transmogrified, divergent evolutioned, etc. by tenko</i>
+<hr>
+row 1 and 3: art by <a href="https://twitter.com/ferwanwan">ferwanwan</a>  <br>
+row 2: art by <a href="https://twitter.com/WEBPARTEEZ">webparteez</a> <br>
+roninko art by <a href="https://twitter.com/felitech_">felitech</a><br>
+nekotenko art by <a href="https://twitter.com/muttvore">muttvore</a><br>
 </div>
 </body>
 </html>
