--- a/neopets/vim.html
+++ b/neopets/vim.html
@@ -256,31 +256,16 @@
           <center>
           <img src="/images/other/borikrawk.png">
           <br><br>
-          Collab playlist with <a href="https://neopets.lgbt/tenko">Tenko.</a>
-Songs at the top: listened more by Tenko. Songs at the bottom: listened more by Vim. Not a static playlist, songs swap around from time to time<br><br>
+Playlist shared with <a href="/tenko">Tenko.</a><br><br>
           <audio controls="" id="audio" autoplay="false" tabindex="0"></audio>
           </center><br>
           <ul id="playlist">
             <hr>
             <br>
-          
-            <a href="audio/tenko/stackerrobot.mp3">★ NegaRen - Stacker Robot (BANDETTO & Emoticon 200X RESTACK)</a><br>
-            <a href="audio/tenko/babysohardcore.mp3"> ★ BANDETTO - baby so hardcore</a><br>
-            <a href="audio/tenko/futurefuck.mp3">★ Gynx + Srgt. Moon - Future FUCK</a> <br>
-            <a href="audio/tenko/difficult.mp3">★ Uffie - Difficult (2006 Parties Remix By SebastiAn)</a><br>
-            <a href="audio/tenko/overcome.mp3">★ Happycore - Overcome</a> <br>
-            <a href="audio/tenko/scatman.mp3">★ Scatman John - Scatman (Ski-Ba-Bop-Ba-Dop-Bop)</a> <br>
-            <a href="audio/tenko/cannibalcapital.mp3">★ Guerilla Toss - Cannibal Capital </a><br>
-            <a href="audio/tenko/vertigo.mp3">★ The Hellp - Vertigo </a><br>
-            <a href="audio/roninko/acidraindrops.mp3">★ People Under The Stairs - Acid Raindrops</a><br>
-            <a href="audio/tenko/persistence.mp3">★ King Gizzard And The Lizard Wizard - Persistence</a><br>
-            <a href="audio/vim/troublemaker.mp3">★ Chrissy Zebby Tembo - Trouble Maker</a><br>
-            <a href="audio/vim/belgrade.mp3">★ Battle Tapes - Belgrade </a> <br>
-            <a href="audio/vim/broken.mp3">★ Fox Stevenson - Broken Man</a><br>
-            <a href="audio/vim/flagpole.mp3">★ Harvey Danger - Flagpole Sitta </a><br>
-            <a href="audio/vim/losercrew.mp3">★ Pablo - Loser Crew </a><br>
-            <a href="audio/vim/sandra.mp3">★ White Fence - Sandra (When The Earth Dies) </a> <br>
-            <a href="audio/vim/PA.mp3">★ Lingua Ignota - PENNSYLVANIA FURNACE      </a>
+            <a href="/audio/vim/ongp.mp3">★ Death Grips - On GP</a>
+            <br>
+            <a href="/audio/vim/acidking.mp3">★ Malibu Ken - Acid King</a>
+            <a href="/audio/vim/judgement.mp3">★ LINGUA IGNOTA - THE SACRED LINAMENT OF JUDGMENT</a>
                 
             </div>
             </div>
