--- a/neopets/tenko.html
+++ b/neopets/tenko.html
@@ -349,10 +349,9 @@
         <br>
         <a href="/audio/tenko/funnyfarm.mp3">★ Lightning Bolt - Funny Farm</a>
         <br>
-        <p id="slidetotheleft">
        
        <br>
-       ★ Tenko's main tracks change often. It will almost certainly include a guitar and mayhaps be tinged with rock and or folk. Also see the tracks on <a href="/vim">Vim's</a> page, which are similar to Tenko's tastes. </p>
+       ★ Tenko's main tracks change often. It will almost certainly include a guitar and mayhaps be tinged with rock and or folk. Also see the tracks on <a href="/vim">Vim's</a> page, which are similar to Tenko's tastes. 
       </div>
   </div>
 
