--- a/about.html
+++ b/about.html
@@ -158,7 +158,7 @@ body {
 - File hosting and email for Tenko and friends
 </div>
 <div class="main">
- "Privacy notice": This site can be entirely navigated with Javascript disabled, however, it enables conveniences like the music player function on character pages. Cookies are only used for closing message boxes.  
+ "Privacy policy": You can browse this site entirely with Javascript and cookies disabled. Javascript is only really used to enable music player controls, and you like music right? This site is self-hosted and nothing is ever tracked or saved from you. 
 </div>
 <div class="main">See also:<br>
 
