--- a/neopets/roku.html
+++ b/neopets/roku.html
@@ -165,7 +165,11 @@
 <br>
 VIEW ON: <a href="https://www.neopets.com/petlookup.phtml?pet=Rokukuyu">NEOPETS</a> | <a href="https://impress.openneo.net/outfits/2502666">OPENNEO</a>
   </div>
-
+  <div class="main">
+<i>Most known in Tenko's group for being the reason there's more holes in their lawn than a Symol-infested yard. Roku's extra-long tusks and Tenko's love for having all her weight smushed on top of him are generally a messy combo, for her tusks and Tenko's back spikes sink into the terrain while they get their fix. And if not the lawn, less destructive alternatives include a good pressing by the edge of the pool or on pool float during a pool party with <a href="/lasak">Lasak</a>. 
+<br><br>
+So about those tusks in the ground, first of all, why? She's about as spontaneous as Tenko and the lawn always seems to be the place they lock eyes with each other around the house, so it's only natural! And more importantly, she doesn't mind the taste of dirt in her teefers. Her Transmogrification into a Mutant Neopet has warped her sense of taste, and a lot of unusual things taste average at best to her tongue. It's no wonder no food goes to waste around the house, she'll lick anything clean and won't complain about it. She's the designated taste taster of the house, so to speak. Despite her appearance and antics, she's actually very well mannered, a very good Neopet for Tenko and the gang. 
+</div>
   <div class="main">
     ROKU IS BUSY EARNING AVATARS! CHECK BACK LATER
 
