--- a/neopets/sphoryx.html
+++ b/neopets/sphoryx.html
@@ -65,6 +65,21 @@
     font-weight: bold;
   }
 
+  .mainy {
+    position: relative;
+    top: -50%;
+    margin: 20px auto;
+    width: 70%;
+    max-width: 700px;
+    background: #242424;
+    color: rgb(255, 255, 255);
+    word-wrap: break-word;
+    padding: 10px;
+    text-align: left;
+    box-shadow: 10px 10px black;
+    font-weight: bold;
+  }
+
   /* begin link colors and decorations */
 
   a:link,
@@ -87,6 +102,12 @@
   img {
     max-width: 100%;
     max-height: 100%;
+  }
+
+  .bigtext {
+    color: rgb(255, 255, 255);
+    font-size: 20px;
+    text-align: center;
   }
 
 </style>
@@ -165,7 +186,11 @@
 <br>
 VIEW ON: <a href="https://www.neopets.com/petlookup.phtml?pet=Sphoryx">NEOPETS</a> | <a href="https://impress-2020.openneo.net/outfits/3019425">OPENNEO</a>
   </div>
-
+  <div class="mainy">
+  <i> <span class="bigtext">Excerpt from Tenko</span>
+  <br><br>ศพโอริกซ์, that is the name I gave her. It's in Thai, and means exactly what her appositive says, "The Oryx's Corpse". Nearing the end of my grand journey to collect as many blessings from Neopia's leaders, I stumbled upon this beautfiul, irradiant Ogrin near a quiet shrine the locals had told me about, though they never told me I would have company there. These people lived outside the usual hustle and bustle life inside Shenkuu's main walls in an area that receives almost no tourists. 
+  Not counting <a href="https://www.neopets.com/petlookup.phtml?pet=Cococchi">Cococchi <img src="/images/other/faviconV2.png" width="18px" height="18px"></a></i> 
+  </div>
   <div class="main">
     SPHORYX IS BUSY EARNING AVATARS! CHECK BACK LATER
 
