--- a/other/404.html
+++ b/other/404.html
@@ -75,7 +75,9 @@ a:visited {
    </div>
    <div class="main">   
     Click the GOODBOY to go home.<br>
-    Did you expect a page to be here? I might be working on it today, <a href="https://github.com/tenkowski/NEOPETS.LGBT">check the GitHub</a>
+    Did you expect a page to be here? <br>
+    You may find it being worked on
+    <br> <a href="https://github.com/tenkowski/NEOPETS.LGBT">in the GitHub</a>
    
     <br><br>
 
