--- a/neopets/sphoryx.html
+++ b/neopets/sphoryx.html
@@ -110,6 +110,10 @@
     text-align: center;
   }
 
+  .favicon {
+    width: 17px;
+    height: 17px;
+  }
 </style>
 
 <script src="jquery-1.7.js" type="text/javascript"></script>
@@ -180,21 +184,28 @@
   <div class="main">
     <img src="/images/characters/sphoryx/box-sphoryx.gif">
     <br>
-  <br>
-  SPHORYX, <i>THE ORYX'S CORPSE</i>
-  <br> ELDERLYGIRL OGRIN
-<br>
-VIEW ON: <a href="https://www.neopets.com/petlookup.phtml?pet=Sphoryx">NEOPETS</a> | <a href="https://impress-2020.openneo.net/outfits/3019425">OPENNEO</a>
+    <br>
+    SPHORYX, <i>THE ORYX'S CORPSE</i>
+    <br> ELDERLYGIRL OGRIN
+    <br>
+    VIEW ON: <a href="https://www.neopets.com/petlookup.phtml?pet=Sphoryx">NEOPETS</a> | <a
+      href="https://impress-2020.openneo.net/outfits/3019425">OPENNEO</a>
   </div>
   <div class="mainy">
-  <i> <span class="bigtext">Excerpt from Tenko</span>
-  <br><br>ศพโอริกซ์, that is the name I gave her. It's in Thai, and means exactly what her appositive says, "The Oryx's Corpse". Nearing the end of my grand journey to collect as many blessings from Neopia's leaders, I stumbled upon this beautfiul, irradiant Ogrin near a quiet shrine the locals had told me about, though they never told me I would have company there. These people lived outside the usual hustle and bustle life inside Shenkuu's main walls in an area that receives almost no tourists. 
-  Not counting <a href="https://www.neopets.com/petlookup.phtml?pet=Cococchi">Cococchi <img src="/images/other/faviconV2.png" width="18px" height="18px"></a></i> 
+    <i> <span class="bigtext">Excerpt from Tenko</span>
+      <br><br>ศพโอริกซ์, that's the name I gave her. It's Thai for "The Oryx's Corpse". Nearing the end of my grand
+      journey to receive as many blessings as I could from Neopia's leaders, I found this beautfiul Ogrin spirit alone
+      at a secluded shrine that locals had revered and told me about. It was never clear to me whether she was watching
+      over this particular shrine, or if we were both on the move and our meeting was complete happenstance.
+      <br><br>
+      Not counting the beast that is <a href="https://www.neopets.com/petlookup.phtml?pet=Cococchi">Cococchi <img
+          src="/images/other/faviconV2.png" class="favicon"></a> who is in a league of her own and not even affiliated with us, Sphoryx is the most odd one out of everyone in my party, but we accept her all the same. She does not live with us, but she knows how to get to us. 
+        </i> 
   </div>
   <div class="main">
     SPHORYX IS BUSY EARNING AVATARS! CHECK BACK LATER
 
-</div>
+  </div>
 
 </body>
 
